# CodeIntel

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml
backend/: .env  README.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: README.md
backend/api/v1/: README.md  __init__.py  router.py
backend/app/: bootstrap.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/core/: config.py  lifespan.py  logging.py
backend/app/middleware/: __init__.py  error_handler.py  request_logging.py
backend/app/schemas/: agent.py  analytics.py  diagrams.py  graph.py  (+3 more)
backend/core/: README.md
backend/graph/: README.md  __init__.py
backend/models/: README.md  __init__.py  schemas.py
backend/parser/: README.md  __init__.py  code_parser.py  js_parser.py  metadata_extractor.py  python_parser.py
backend/repositories/: README.md
backend/routes/: chat.py  repository.py
backend/schemas/: README.md
backend/services/: README.md  __init__.py  chroma_service.py  clone_service.py  embedding_service.py  enhanced_index_service.py  file_reader.py  rag_service.py  structure_service.py
backend/tests/: README.md  test_agent.py  test_agent_enrichment.py  test_agent_synthesis.py  test_analytics.py  test_cache.py  test_diagrams.py  test_embeddings.py  test_graph.py  test_health.py  test_ingestion.py  test_ingestion_delete.py  test_llm.py  test_llm_service.py  test_parser.py  test_retrieval.py
backend/utils/: __init__.py  chunking.py
backend/workers/: README.md  __init__.py
(+318 files in other folders)
